--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <title>ajax-ex-calendar</title>
     <script id="giorni-template" type="text/x-handlebars-template">
@@ -20,6 +21,11 @@
 
         <div class="container">
             <div id="calendario">
+                <div id="mese">
+                    <i class="fas fa-chevron-left left"></i>
+                    <h1><span>Gennaio</span> 2018</h1>
+                    <i class="fas fa-chevron-right right"></i>
+                </div>
                 <div id="griglia">
 
                 </div>
