--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="container">
             <div id="calendario">
                 <div id="mese">
-                    <i class="fas fa-chevron-left left"></i>
+                    <i class="fas fa-chevron-left left" style="display:none"></i>
                     <h1><span>Gennaio</span> 2018</h1>
-                    <i class="fas fa-chevron-right right"></i>
+                    <i class="fas fa-chevron-right right" style="display:none"></i>
                 </div>
                 <div id="griglia">
 
